--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,19 @@
     <mate charset='utf8'></mate>
     <script src="src/script/index.js"></script>
     <style>
+    body {
+        margin: 0;
+    }
     canvas {
         width: 1000px;
         height: 600px;
-        background: #F5F5F5;
+        top: 0;
+        background: #ffffff;
+        box-shadow: -1px 1px 10px darkgrey;
+        position: absolute;
+        left: 50%;
+        top:30px;
+        transform: translateX(-50%);
     }
     </style>
 </head>
