--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <mate charset='utf8'></mate>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <script src="src/script/index.js"></script>
     <style>
     body {
