--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" type="image/png" href="favicon.ico">
     <title>Document</title>
     <mate charset='utf8'></mate>
     <script src="src/script/index.js"></script>
@@ -14,12 +15,11 @@
     canvas {
         width: 1000px;
         height: 600px;
-        top: 0;
+        top: 100px;
         background: #ffffff;
         box-shadow: -1px 1px 10px darkgrey;
         position: absolute;
         left: 50%;
-        top:30px;
         transform: translateX(-50%);
     }
     </style>
