--- a/public/index.html
+++ b/public/index.html
@@ -7,24 +7,15 @@
     <link rel="icon" type="image/png" href="favicon.ico">
     <title>Document</title>
     <mate charset='utf8'></mate>
-    <script src="src/script/index.js"></script>
     <style>
     body {
         margin: 0;
     }
-    canvas {
-        width: 1000px;
-        height: 600px;
-        top: 100px;
-        background: #ffffff;
-        box-shadow: -1px 1px 10px darkgrey;
-        position: absolute;
-        left: 50%;
-        transform: translateX(-50%);
-    }
     </style>
 </head>
 <body>
-    <canvas id="canvas" width="1000" height="600"></canvas>
+    <div id="charts"></div>
+    <script src="./dist/js/react.bundle.js'"></script>
+    <script src="./dist/js/react-dom.bundle.js'"></script>
 </body>
 </html>
