--- a/index.html
+++ b/index.html
@@ -1,13 +1,3 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="X-UA-Compatible" content="ie=edge"><link rel="icon" type="image/png" href="favicon.ico"><title>Document</title><mate charset="utf8"></mate><script src="src/script/index.js"></script><style>body {
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="X-UA-Compatible" content="ie=edge"><link rel="icon" type="image/png" href="favicon.ico"><title>Document</title><mate charset="utf8"></mate><style>body {
         margin: 0;
-    }
-    canvas {
-        width: 1000px;
-        height: 600px;
-        top: 100px;
-        background: #ffffff;
-        box-shadow: -1px 1px 10px darkgrey;
-        position: absolute;
-        left: 50%;
-        transform: translateX(-50%);
-    }</style><link rel="icon" href="favicon.ico"></head><body><canvas id="canvas" width="1000" height="600"></canvas><script src="js/app.bundle.4b4017f5b6d4149d01c9.js"></script></body></html>
+    }</style><link rel="icon" href="favicon.ico"></head><body><div id="charts"></div><script src="./dist/js/react.bundle.js'"></script><script src="./dist/js/react-dom.bundle.js'"></script><script src="js/app.bundle.b594243da03a9e97664e.js"></script><script src="js/vendor.bundle.b594243da03a9e97664e.js"></script></body></html>
