--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="X-UA-Compatible" content="ie=edge"><link rel="icon" type="image/png" href="favicon.ico"><title>Document</title><mate charset="utf8"></mate><style>body {
         margin: 0;
-    }</style><link rel="icon" href="favicon.ico"></head><body><div id="charts"></div><script src="./dist/js/react.bundle.js'"></script><script src="./dist/js/react-dom.bundle.js'"></script><script src="js/app.bundle.b594243da03a9e97664e.js"></script><script src="js/vendor.bundle.b594243da03a9e97664e.js"></script></body></html>
+    }</style><link rel="icon" href="favicon.ico"></head><body><div id="charts"></div><script src="js/app.bundle.52a511f55842f81306f2.js"></script><script src="js/vendor.bundle.52a511f55842f81306f2.js"></script></body></html>
