--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" type="image/png" href="favicon.ico">
-    <title>Document</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <title>M-Charts</title>
     <mate charset='utf8'></mate>
     <style>
     body {
