--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="X-UA-Compatible" content="ie=edge"><link rel="shortcut icon" type="image/x-icon" href="favicon.ico"><title>MCharts</title><mate charset="utf8"></mate><style>body {
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="X-UA-Compatible" content="ie=edge"><link rel="shortcut icon" type="image/x-icon" href="favicon.ico"><title>M-Charts</title><mate charset="utf8"></mate><style>body {
         margin: 0;
-    }</style><link rel="icon" href="favicon.ico"></head><body><div id="charts"></div><script src="js/app.bundle.b390abd9a34dcffaeaf9.js"></script><script src="js/vendor.bundle.b390abd9a34dcffaeaf9.js"></script></body></html>
+    }</style><link rel="icon" href="favicon.ico"></head><body><div id="charts"></div><script src="js/app.bundle.e351179d21aeb5a6d3d7.js"></script><script src="js/vendor.bundle.e351179d21aeb5a6d3d7.js"></script></body></html>
